# Bad-programming-language

./: CMakeLists.txt  README.md  bad_sintax  run.sh
bad_compiler/: bad_compiler_main.cpp  bad_source_get.cpp  bad_source_get.h  const.h
bad_compiler/bad_compiler/: bad_compiler.cpp  bad_compiler.h
bad_compiler/bad_lexer/: bad_lexer.cpp  bad_lexer.h
bad_compiler/bad_parser/: bad_parser.cpp  bad_parser.h
